--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<p>First paragraph</p>
 	<p>Second paragraph</p>
 	<p>Third paragraph(by FastTI)</p>
+	<div>Add div(by FastTI)</div>
 </body>
 </html>
